# web_server_rs

./: .gitignore  Cargo.toml  README.md  diesel.sh  key.pem  run.sh
migrations/2021-06-02-045210_create_cats/: down.sql  up.sql
src/: lib.rs  models.rs
src/tests/: mod.rs  tests_http.rs
src/utils/: cst.rs  mod.rs  ssl.rs
static/: index.html
