[package]
name = "web_server_rs"
version = "0.1.0"
authors = ["lamhai <lamthanhhai141@gmail.com>"]
edition = "2018"
default-run = "web_server_rs"
readme = "README.md"
homepage = "https://github.com/lamhai1401/web_server_rs"
repository = "https://github.com/lamhai1401/web_server_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
env_logger = "0.8"
rustls = "0.18"
actix-web = { version = "3", features = ["rustls"] }

# rustls = "0.16"
# actix-web = { version = "2.0.0", features = ["rustls"] }
# actix-files = "0.2.1"
# actix-rt = "1.0.0"

[lib]
name = "web_server_rs"
# path = "src/"

[[bin]]
name = "web_server_rs"
path = "src/bin/main.rs"
