[package]
name = "web_server_rs"
version = "0.1.0"
authors = ["lamhai <lamthanhhai141@gmail.com>"]
edition = "2018"
default-run = "web_server_rs"
readme = "README.md"
homepage = "https://github.com/lamhai1401/web_server_rs"
repository = "https://github.com/lamhai1401/web_server_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
rustls = "0.18"
futures = "0.3"
actix-web = { version = "3", features = ["rustls"] }
actix-service = "1.0.0"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-rt = "2.2.0"
actix-http = "2.2.0"
awc = "2.0.3"

[dev-dependencies]
actix-rt = "1"

[lib]
name = "web_server_rs"
# path = "src/"

[[bin]]
name = "web_server_rs"
path = "src/bin/main.rs"
